# JRBot

./: .gitignore  README.md  _pyproject.toml  dict_db.db  pyproject.toml
src/: .env.example  config_reader.py  dict_db.db  main.py
src/ather/: data_session.py  data_session_collector.py  message_templates.py  prefix.py  word.py
src/db/: db_init.py
src/forms/: abstract_form.py  inline_form.py
src/fsm/: dictionary_fcm.py  job_fcm.py  quiz_fcm.py  random_fact_fcm.py  talk_fp_gpt_fcm.py  talk_gpt_fcm.py
src/gpt/: dictionary_gpt.py  gpt.py  job_gpt.py  quiz_gpt.py  random_fact_gpt.py  talk_fp_gpt.py  talk_gpt.py
src/handlers/: dictionary_handler.py  job_handler.py  main_handler.py  quiz_handler.py  random_fact_handler.py  talk_fp_gpt_handler.py  talk_gpt_handler.py
src/keyboards/: dictionary_keyboard.py  job_keyboard.py  keyboard_collector.py  main_keyboard.py  quiz_keyboard.py  random_fact_keyboard.py  talk_fp_gpt_keyboard.py  talk_gpt_keyboard.py
