[project]
name = "javarushbot"
version = "0.1.0"
description = "Тестовый проект для курсов"
authors = [
    {name = "Alex",email = "int_o@mail.ru"}
]
readme = "README.md"
requires-python =  ">=3.9,<4.0"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "gigachat (>=0.1.39,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
